--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: 'Recursive', sans-serif;
-    color: antiquewhite;
+    color: #FFFFFC;
   }
 
 body{
@@ -287,7 +287,7 @@ body{
     border: 2px solid #F5D300;
   }
 
-  /** SIdebar trial**/
+  /** Sidebar starts**/
   .sidebar {
     position: fixed;
     left: 0px;
@@ -313,85 +313,63 @@ body{
 
   .sidebar a {
     text-decoration: none;
-    font-size: 18px;
-    color: #ededed;
-    font-weight: 400; 
+    color: #F5D300;
+    font-weight: bold; 
   }
 
   .sidebar a:hover {
-    color: rgba(67, 144, 168, 0.9); 
+    color: #FFFFCC;
+    font-size: 1.2em;
   }
   
   .sidebar.fixed {
     -webkit-transform: translateX(0);
     transform: translateX(0); 
   }
+/** SB ends**/
 
-  .banner {
-    color: white;
-    text-align: center;
-    height: 100vh;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background-size: cover;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-     -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-attachment:  fixed; 
+
+/* Name-page starts */
+  .name-page {
+    text-align: left;
+    height: 80vh;
+    padding-right: 20px;
   }          
 
-  .banner h1 {
-    color: rgba(237, 237, 237, 0.9);
-    font-size: 50px;
-    font-weight: bold;
-    text-shadow: 0px 1px rgba(0, 0, 0, 0.2); 
+  .name-page h4{ /*Hey there, my name is*/
+    color: #F5D300;
+    padding-bottom: 0px;
   }
 
-  .banner p {
-    font-size: 17px; 
+  .name-page h1{ /*Athashree Vartak.*/
+    font-weight: bold;
+    padding-top: 0px;
+    color: #FFFFFF;
   }
-            
-  .banner-small {
-    height: 300px;
-    width: 100%; 
+  .name-page h2{ /*SE | ML | WD*/
+    color: #FAEBD7;
   }
-            
-  .arrow-down {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 40px;
-    display: none; 
+  .name-page h3 i{ /*Seeking SWE intern roles*/
+    color: #F1C891;
   }
-            
-  .scroll {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    font-size: 35px;
-    padding: 10px;
-    color: rgba(237, 237, 237, 0.9);
-    -webkit-animation: arrowBounce 2.5s infinite;
-    animation: arrowBounce 2.5s infinite; 
+     
+  .name-page #description h4{ /*Description*/
+    float: left;
+    color: #F1C891;
+    line-height: 1.2em;
+    padding-top: 35px;
   }
+  /*Name-page Ends*/     
   .section {
     z-index: 2000;
     padding: 50px 140px 50px 140px;
     margin-bottom: 25px; 
+    clear: both;
   }            
-  /** SBtrial ends**/
+  
 
-  /** HEADER ENDS**/
+  
 
-  /*BODY STARTS*/
-  /*BODY ENDS*/
 
   /**FOOTER STARTS**/
 
@@ -413,7 +391,77 @@ body{
 	/* Text Loading */
 	.ctn-preloader .animation-preloader .txt-loading {
 	  font: bold 5em;
-	}
+  }
+  
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    padding: 15px;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 75%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+
+  /*name-page Start*/
+  .name-page {
+    padding-left: 120px;
+    padding-top: 30px;
+    padding-right: 30px;
+  }          
+
+  .name-page h4{ /*Hey there, my name is*/
+    font-size: 1.2em;
+  }
+
+  .name-page h1{ /*Athashree Vartak.*/
+    font-size: 5em;
+  }
+
+  .name-page h2{ /*SE | ML | WD*/
+    font-size: 2.2em;
+  }
+
+  .name-page h3 i{ /*Seeking SWE intern roles*/
+    font-size: 0.9em;
+  }
+     
+  .name-page #description h4{/*Description*/
+    font-size: 1.2em;
+  }
+  /*name-page End*/
+
 }
 
 /* -------------------Medium Devices----------------------- */
@@ -429,11 +477,80 @@ body{
 	.ctn-preloader .animation-preloader .txt-loading {
 	  font: bold 3.5em ;
   }
+
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+
+  /*name-page Start*/
+  .name-page {
+    padding-left: 80px;
+    padding-top: 20px;
+    padding-right: 20px;
+    height: 100vh;
+  }          
+
+  .name-page h4{ /*Hey there, my name is*/
+    font-size: 1.1em;
+  }
+
+  .name-page h1{ /*Athashree Vartak.*/
+    font-size: 4em;
+  }
+
+  .name-page h2{ /*SE | ML | WD*/
+    font-size: 1.8em;
+  }
+
+  .name-page h3 i{ /*Seeking SWE intern roles*/
+    font-size: 0.9em;
+  }
+     
+  .name-page #description h4{/*Description*/
+    font-size: 1.1em;
+  }
+  /*name-page End*/
   
 }
 
 /*---------------------Small Devices-------------*/
-@media (max-width: 767px) {
+@media (min-width: 576px) and (max-width: 767px) {
 	/* Prelaoder */
 	/* Spinner Loading */
 	.ctn-preloader .animation-preloader .spinner {
@@ -446,7 +563,48 @@ body{
 	  font: bold 2em;
   }
 
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 75%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+
   #logo-img {
+    float: left;
     width: 90px;
     height: 80px;
     margin: 5px 5px 5px 5px;
@@ -459,6 +617,71 @@ body{
   #nav-list a {
     padding-top: 5px;
   }
+
+  /*name-page Start*/
+  .name-page {
+    padding-left: 50px; 
+    padding-top: 20px;
+    padding-right: 30px;
+    height: 80vh;
+  }          
+
+  .name-page h4{ /*Hey there, my name is*/
+    font-size: 1em;
+  }
+
+  .name-page h1{ /*Athashree Vartak.*/
+    font-size: 3em;
+  }
+
+  .name-page h2{ /*SE | ML | WD*/
+    font-size: 1.4em;
+  }
+
+  .name-page h3 i{ /*Seeking SWE intern roles*/
+    font-size: 0.7em;
+  }
+     
+  .name-page #description h4{ /*Description*/
+    font-size: 0.9em;
+    padding-top: 20px;
+  }
+  /*name-page End*/
 }
 
 
+/*------------------- XS Devices-------------*/
+
+@media (max-width: 575px){
+/*name-page Start*/
+.name-page {
+  padding-left: 30px; /*write media query for this*/
+  height: 70vh;
+}          
+
+.name-page h4{ /*Hey there, my name is*/
+  font-size: 0.8em;
+}
+
+.name-page h1{/*Athashree Vartak.*/
+  font-size: 2.6em;
+}
+
+.name-page h2{ /*SE | ML | WD*/
+  font-size: 1.2em;
+}
+
+.name-page h3 i{ /*Seeking SWE intern roles*/
+  font-size: 0.7em;
+}
+   
+.name-page #description h4{ /*Description*/
+  font-size: 0.9em;
+  padding-top: 10px;
+}
+
+#collapsable-nav li:nth-child(6){
+  border: none;
+}
+/*Banner End*/
+}
