Redesigned collapsable menu button

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,12 +275,40 @@ body{
     font-size: 1.2em;
   }
 
-  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  .navbar-header button.navbar-toggle{
+    border: 1px solid #222629;
+  }
+  
+  .navbar-header .icon-bar {
     border: 1px solid #F5D300;
+    float: right;
+    clear: both;
   }
   .navbar-header button.navbar-toggle {
     clear: both;
     margin-top: -65px;
+  }
+
+  .navbar-header button.navbar-toggle:hover{
+    transform: scale(1.5);
+    background-color: #222629;
+  }
+
+  .navbar-header button.navbar-toggle:focus{
+    background-color: #222629;
+  }
+
+  .navbar-header button span:nth-child(2){
+    width: 1.2em;
+  }
+
+  .navbar-header button span:nth-child(3){
+    width: 0.8em;
+  }
+
+  .navbar-header button span:nth-child(4){
+    width: 0.4em;
+
   }
   
   #collapsable-nav li:nth-child(6){
