--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,10 @@ body{
     max-height: 80%;
   }
   
+  section img{
+    max-width: 80%;
+    max-height: 80%;  
+  }
 
 
   /**FOOTER STARTS**/
