--- a/css/styles.css
+++ b/css/styles.css
@@ -395,12 +395,8 @@ body{
     clear: both;
   }            
   
-  #soc{ /*Temporarry - site under construction*/
-    max-width: 80%;
-    max-height: 80%;
-  }
-  
-  section img{
+
+  .section img{
     max-width: 80%;
     max-height: 80%;  
   }
